# livecoding2training

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt  sorted_vector.hpp
tests/: CMakeLists.txt  tests.cpp
